--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,18 @@ body {
 }
 
 .label {
-  @apply leading-text-line-height text-base font-normal text-black;
+  @apply text-base font-normal leading-text-line-height text-black;
 }
 
 .input-text {
-  @apply border-login-border leading-text-line-height text-input-color border-app-border mb-4 mt-1 w-full rounded-md bg-white text-base font-normal;
+  @apply mb-4 mt-1 w-full rounded-md border-app-border border-login-border bg-white text-base font-normal leading-text-line-height text-input-color;
 }
 
 .app-button {
-  @apply leading-text-line-height border-app-border my-4 w-full whitespace-nowrap rounded-md border-black bg-black px-[148px] py-[18px] text-center text-base font-medium uppercase tracking-wider text-white;
+  @apply my-4 w-full whitespace-nowrap rounded-md border-app-border border-black bg-black px-[148px] py-[18px] text-center text-base font-medium uppercase leading-text-line-height tracking-wider text-white;
+}
+
+.active a {
+  color: black !important;
+  font-weight: bold !important;
 }
